[gd_scene load_steps=8 format=3 uid="uid://bf1w8c4n2n7eb"]

[ext_resource type="Script" path="res://Scripts/Enemies/BaseCore_Enemy.gd" id="1_bylge"]
[ext_resource type="Script" path="res://Scripts/Enemies/Cores/TakingDamageCore_Enemy.gd" id="2_tglsn"]
[ext_resource type="Script" path="res://Scripts/Enemies/Cores/DoingDamageCore_Enemy.gd" id="3_glg1l"]
[ext_resource type="Script" path="res://Scripts/Enemies/Cores/CharacteristicsCore_Enemy.gd" id="4_byd7f"]
[ext_resource type="Script" path="res://Scripts/Enemies/Cores/DeathCore_Enemy.gd" id="5_7hmla"]
[ext_resource type="Script" path="res://Scripts/Enemies/Cores/MovementCore_Enemy.gd" id="6_lw0ct"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwxmm"]
size = Vector2(32, 64)

[node name="Enemy" type="RigidBody2D"]
collision_layer = 4
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_pwxmm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -32.0
offset_right = 16.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.781072, 0.223832, 0.236631, 1)

[node name="Cores" type="Node2D" parent="."]
script = ExtResource("1_bylge")

[node name="CharacteristicsCore_Enemy" type="Node2D" parent="Cores"]
script = ExtResource("4_byd7f")

[node name="TakingDamageCore_Enemy" type="Node2D" parent="Cores"]
script = ExtResource("2_tglsn")

[node name="DoingDamageCore_Enemy" type="Node2D" parent="Cores"]
script = ExtResource("3_glg1l")

[node name="MovementCore_Enemy" type="Node2D" parent="Cores"]
script = ExtResource("6_lw0ct")

[node name="DeathCore_Enemy" type="Node2D" parent="Cores"]
script = ExtResource("5_7hmla")
